--- a/package.json
+++ b/package.json
@@ -22,24 +22,25 @@
     "typescript"
   ],
   "author": {
-		"email": "buissonalexandre16@gmail.com",
-		"name": "Alexsouye"
-	},
+    "email": "buissonalexandre16@gmail.com",
+    "name": "Alexsouye"
+  },
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/alexsouye/highnoon-bot/issues"
   },
   "homepage": "https://github.com/alexsouye/highnoon-bot",
   "devDependencies": {
+    "nodemon": "^2.0.6",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4",
-    "nodemon": "^2.0.6"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "@discordx/utilities": "^3.0.4",
     "axios": "^0.24.0",
     "discord.js": "^13.3.1",
     "discordx": "^8.1.0",
+    "dotenv": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0"
   }
