--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "2.0.1",
   "description": "Bot discord du groupe de potes High Noon, conçu en TypeScript par Alexsouye",
   "main": "build/client.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node build/client.js",
-    "dev": "ts-node src/client.ts",
-    "dev:watch": "nodemon"
+    "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/client.ts",
+    "dev": "node --loader ts-node/esm/transpile-only src/client.ts",
+    "serve": "node build/main.js"
   },
   "repository": {
     "type": "git",
@@ -36,7 +37,9 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@discordx/importer": "^1.1.2",
     "@discordx/utilities": "^3.0.4",
+    "@discordx/pagination": "^1.1.0",
     "axios": "^0.24.0",
     "discord.js": "^13.3.1",
     "discordx": "^9.0.1",
