--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   },
   "dependencies": {
     "@discordx/importer": "^1.1.2",
-    "@discordx/utilities": "^3.0.4",
     "@discordx/pagination": "^1.1.0",
+    "@discordx/utilities": "^3.0.4",
     "axios": "^0.24.0",
+    "better-sqlite3": "^7.5.3",
     "discord.js": "^13.3.1",
     "discordx": "^9.0.1",
     "dotenv": "^10.0.0",
+    "quick.db": "^7.1.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0"
   }
