--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/client.ts",
+    "start": "node --loader ts-node/esm/transpile-only src/client.ts",
     "dev": "node --loader ts-node/esm/transpile-only src/client.ts",
     "serve": "node build/main.js"
   },
